samples/_failures_safe/1761073300_72f061_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79b22a06.c: In function ‘free_graph’:
./samples/SAFE/__tmp_79b22a06.c:158:17: error: expected declaration or statement at end of input
  158 |                 for (int i = 0; i < g->vertex_count; i++) free(g->adj_list[i]);
      |                 ^~~
./samples/SAFE/__tmp_79b22a06.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_79b22a06.c:158:17: error: expected declaration or statement at end of input
